--- a/imobiliaria.html
+++ b/imobiliaria.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -67,4 +67,5 @@
 
 
 </body>
+
 </html>
